# python-project-lvl3

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  ru-hexlet-io-courses.html  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  cli_args.py  data_processing.py  download.py  facebook.html  links_and_save.py  loader.py  logger_config.py  names_and_paths.py  names_processing.py  page_loader.py  page_loader_funcs.py  paths_processing.py  script.py  url_processing.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  fixtures.py  page_loader_test.py  test_downloader1.py
tests/fixtures/: expected.html
