[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "."
authors = ["."]
license = "."

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
