[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "."
authors = ["Me"]
license = "."
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pook = "^1.0.2"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"
